spacing issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,7 @@ body {
 	background: -webkit-linear-gradient(to right, #28A7EC, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #28A7EC, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	position: relative;
-	min-height: 100%;
+	min-height: 97%;
 	flex: 1;
 }
 #title {
@@ -26,7 +26,8 @@ body {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 20px;
+	height: 10px;
+	display: inline;
 }
 #options {
 	width: 40%;
@@ -42,56 +43,51 @@ body {
 }
 .pane {
 	background-color: #FFEA54 !important;
-	text-align: center; 
+	text-align: center;
 	color: #29a7ec !important;
 }
-
-.info-label{
+.info-label {
 	color: #FFEA54;
 	display: inline;
 }
-
-.dropdown{
+.dropdown {
 	padding-top: 5%;
 }
 
 /*About sidenav*/
 .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background: #004484;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+	height: 100%;
+	width: 0;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background: #28A7EC;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #56CCF2, #28A7EC);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #56CCF2, #28A7EC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	overflow-x: hidden;
+	transition: 0.5s;
+	padding-top: 60px;
 }
-
 .sidenav a {
-    text-decoration: none;
-    color: #8cb9e6;
-    transition: 0.3s;
+	text-decoration: none;
+	color: #8cb9e6;
+	transition: 0.3s;
 }
-
-.sidenav p{
+.sidenav p {
 	margin: 15px;
 	color: white;
 }
-
-.sidenav a:hover, .offcanvas a:focus{
-    color: #f1f1f1;
+.sidenav a:hover, .offcanvas a:focus {
+	color: #f1f1f1;
 }
-
 .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
+	position: absolute;
+	top: 0;
+	right: 25px;
+	font-size: 36px;
+	margin-left: 50px;
 }
-
 .i {
 	display: inline;
 	float: left;
